<resources>
    <string name="app_name">Go Strada</string>
    <string name="sign_in">Sign In</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_activity">Activity</string>
    <string name="menu_class">Class</string>
    <string name="menu_consult">Consult</string>
    <string name="welcome_to">Welcome to</string>
    <string name="iik_strada">IIK STRADA</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_dash_board">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="kalender_akademik">Kalender Akademik</string>
    <string name="jadwal_kuliah">Jadwal Kuliah</string>
    <string name="absensi">Absensi</string>
    <string name="request_surat">Request Surat</string>
    <string name="riwayat_krs">Riwayat KRS</string>
    <string name="lihat_khs">Lihat KHS</string>
    <string name="transkrip_nilai">Transkrip Nilai</string>
    <string name="pembayaran_spp">Pembayaran SPP</string>
    <string name="non_akademik">Non Akademik</string>
</resources>